add_subdirectory(../../package/LibVT LibVT)
add_subdirectory(../../package/LibPCIDB LibPCIDB)
add_subdirectory(../../package/LibPthread LibPthread)
add_subdirectory(../../package/LibAudio LibAudio)
add_subdirectory(../../package/LibHTML LibHTML)
add_subdirectory(../../package/LibIPC LibIPC)
add_subdirectory(../../package/LibGUI LibGUI)
add_subdirectory(../../package/LibCore LibCore)
add_subdirectory(../../package/LibProtocol LibProtocol)
add_subdirectory(../../package/LibDraw LibDraw)
add_subdirectory(../../package/LibM LibM)
add_subdirectory(../../package/AK AK)
add_subdirectory(../../package/LibC LibC)
add_subdirectory(../../package/LibThread LibThread)
add_subdirectory(../../package/LibELF LibELF)
add_subdirectory(../../package/LibMarkdown LibMarkdown)
